added contact pg

--- a/index.html
+++ b/index.html
@@ -26,27 +26,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-dark" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link active text-dark" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Gallery </a>
+                        <a class="nav-link text-light" href="gallery.html">Gallery </a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item">
+                        <a class="nav-link  text-light" href="contact.html">
                             Contact
                         </a>
-                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Contact Form</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="https://facebook.com" class="btn btn-outline-dark d-inline-flex justify-content-around ml-2"
-                                target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com" class="btn btn-outline-dark d-inline-flex justify-content-around mx-1"
-                                target="_blank"><i class="fab fa-instagram"></i></a>
-                            <a href="https://twitter.com" class="btn btn-outline-dark d-inline-flex justify-content-around mr-2"
-                                target="_blank"><i class="fab fa-twitter-square"></i></a>
-                        </div>
+
                     </li>
+
 
                 </ul>
 
@@ -133,7 +124,11 @@
 
 
     </div>
-
+    <footer class="footer bg-dark py-2">
+        <div class="container">
+            <p class="text-light text-center pt-2">Copyright <i class="far fa-copyright"></i> </p>
+        </div>
+    </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
